--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.03.2022 08:35:01</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.03.2022 09:14:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 18.3.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Jogurtová bábovka s kokosem a citronem</div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace obložených žitných chlebů</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tom kha gai, kuřecí maso, zelenina, rýžové nudle- samostatně <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tom kha gai, kuřecí maso, zelenina, rýžové nudle- v menu <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí burrito wrap, fazole, sýr cheddar, variace listových salátů, pažitkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Brokolicové karbanátky s pohankou, dýňová omáčka, pečený brambor <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -101,7 +141,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh se salsou z cerstvych rajcat a okurek, pecene brambory s podzimni zeleninou, salatek 139</li><li>Indonesky nasi goreng s grilovanymi krevetami, krevetovou pastou, zeleninou a vajecnymi omeletkami, salatek 175</li><li>Turecke zapecene lilky s hovezim masem, rajcaty, fazolemi a ementalem, bulgur se smazenou cibulkou, jogurtovy dip, salatek {L} 139</li><li>Hovezi ohanka na cervenem vine s korenovou zeleninou, slaninou a divokym korenim, stouchane brambory s creme fraiche 165</li><li>Thajske kari s pecenym tofu, kvetakem, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 139</li></ol>
+<ol><li>Thajske kari s kousky rybich filetu, pecenymi bataty, lilky, paprikami, arasidy a kokosovym mlekem, jasminova ryze 139</li><li>Peceny filet z cerstveho morcaka stribriteho a norskeho lososa se citronovo-zazvorovou jogurtovou omackou, pecene brambory, salatek 169</li><li>Wrap s nudlickami krutich prsou, rajcaty a ledovym salatem, pecene brambory, jogurtovy bylinkovy dip, salatek 139 (L)</li><li>Grilovane medailonky z hoveziho orechu {US angus} s houbovou omackou, bramborove placky s krupkami, salatek 175 (L)</li><li>Bramborove gnocchi s gorgonzollou, smetanou a pecenou maslovou dyni, salatek 139 (L)</li></ol>
 </td>
 </tr>
 </table>
