--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.03.2022 14:06:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.03.2022 06:10:02</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 18. 03. 2022</h5>
+<h5>Sobota, 19. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Moc se omlouváme, ale Dnes 18.3. má jídelna  Zavřeno</strong>
@@ -22,49 +22,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 18.3.2022</div>
+<div class="nadpis">Sobota 19.3.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Brownie</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Jogurtová bábovka s kokosem a citronem</div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace obložených žitných chlebů</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tom kha gai, kuřecí maso, zelenina, rýžové nudle- samostatně <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tom kha gai, kuřecí maso, zelenina, rýžové nudle- v menu <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí burrito wrap, fazole, sýr cheddar, variace listových salátů, pažitkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Brokolicové karbanátky s pohankou, dýňová omáčka, pečený brambor, zelný salát <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -75,16 +35,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Krkonošské kyselo s houbami a brambory</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Boršč se šlehačkou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Medailonky z vepřové pečeně smažené v sýrovém těstíčku, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dušené hovězí nudličky se zeleninou a chilli, smažené hranolky </td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečené na kari omáčce s ananasem, dušená jasmínová rýže</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na hráškové pyré, grilované rajče na tálu, parmazán, rukola</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se šunkou a kukuřicí zjemněné smetanou, kousky kuřecích prsou, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hamburger z trhaného kachního masa s červeným zelím, sýrem a cibulí, smažené hranolky, mexický dip </td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucené citrónovým dresinkem, filírované kuřecí prsa, vařené vejce</td><td class="menuPrice">139,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">160g Smažené řízky z kuřecích prsou a vepřové pečeně, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřtguláš s feferonkou a cibulí, rozpečený chléb na grilu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová roláda plněná šunkou, žampiony a vejci, mačkané brambory s cibulkou a máslem, malý zeleninový salát</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou gratinovaný šunkou a sýrem, celerové hranolky, sázené vejce, zakysaná smetana</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažená kuřecí játra, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, trhanými listy salátu, zeleninou a mexickým dresinkem, smažené hranolky, česnekový dip</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný chilli dresinkem, plátkovaná krůtí prsa, vařené vejce, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vyšlehaný vanilkový krém s griliašem a mandlemi, smažené slzy v cukru zakápnuté olivovým olejem </td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo a kapkou rumu, šlehačka</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
