--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 06:34:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 07:14:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,10 +7,17 @@
 <h5>Pondělí, 21. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Moc se omlouváme, ale Dnes 18.3. má jídelna  Zavřeno</strong>
+<strong>Bramboračka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							0,-
+							35,-
+						</span>
+</p>
+<p>
+<strong>Hamburský Vepřový plátek s rýží NEBO těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
 						</span>
 </p>
 </div>
